tests/ui/pattern/usefulness/integer-ranges/precise_pointer_matching-message.stderr
error[E0004]: non-exhaustive patterns: `usize::MAX..` not covered
  --> $DIR/precise_pointer_matching-message.rs:3:11
   |
LL |     match 0usize {
   |           ^^^^^^ pattern `usize::MAX..` not covered
   |
   = note: the matched value is of type `usize`
   = note: `usize::MAX` is not treated as exhaustive, so half-open ranges are necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         0..=usize::MAX => {},
LL +         usize::MAX.. => todo!()
   |

error[E0004]: non-exhaustive patterns: `..isize::MIN` and `isize::MAX..` not covered
  --> $DIR/precise_pointer_matching-message.rs:11:11
   |
LL |     match 0isize {
   |           ^^^^^^ patterns `..isize::MIN` and `isize::MAX..` not covered
   |
   = note: the matched value is of type `isize`
   = note: `isize::MIN` and `isize::MAX` are not treated as exhaustive, so half-open ranges are necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
   |
LL ~         isize::MIN..=isize::MAX => {},
LL +         ..isize::MIN | isize::MAX.. => todo!()
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
